<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:paddingBottom="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/foobook_logo" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingVertical="16dp"
        android:paddingHorizontal="25dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/edit_text_bg"
        android:inputType="textEmailAddress"
        android:hint="@string/login_userName"
        android:layout_marginVertical="10dp"
        />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:textStyle="bold"
        android:paddingHorizontal="25dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/edit_text_bg"
        android:inputType="textPassword"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/loginBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/btn_bg"
        android:paddingVertical="20dp"
        android:text="@string/login_login_btn"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="22sp" />

    <Button
        android:id="@+id/loginBenSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login_signUp"
        />


</LinearLayout>