<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@color/background">

        <ImageView
            android:id="@+id/commentItemImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical"
            android:src="@drawable/defaultpic" />

        <TextView
            android:id="@+id/displayNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:text="@string/username" />

        <Button
            android:id="@+id/acceptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:layout_gravity="center_vertical" />

        <Button
            android:id="@+id/declineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decline"
            android:layout_gravity="center_vertical" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
