<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FeedActivity">

    <TextView
        android:id="@+id/commentActivityTitle"
        style="@style/pageTitle"
        android:text="@string/comments_title"
        android:textSize="55dp"
        android:paddingStart="70dp"
        android:paddingTop="15dp"
        android:layout_centerHorizontal="true"
        />


    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/foobook_logo" />

    <LinearLayout
        android:id="@+id/addCommentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_below="@id/commentActivityTitle">

        <ImageView
            android:id="@+id/commentActivityItemImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="4dp"
            android:layout_gravity="top"
            android:scaleType="centerCrop"
            android:src="@drawable/defaultpic" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingStart="8dp">

            <TextView
                android:id="@+id/commentItemUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/commentItemComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/write_your_comment_here"
                android:textSize="12sp" />
        </LinearLayout>
        <ImageButton
            android:id="@+id/sendCommentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="top"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/btn_comment_post" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/addCommentLayout"
        android:layout_marginTop="15dp"
        android:padding="8dp"
        tools:listitem="@layout/comment_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/baseline_menu_open_24"
        app:backgroundTint="@color/colorAccent" />

</RelativeLayout>