<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="1dp">

        <TextView
            android:id="@+id/textView4"
            style="@style/pageTitle"
            android:text="@string/app_name"
            />

        <ImageButton
            android:id="@+id/addPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingRight="1dp"
            app:srcCompat="@drawable/btn_add_post"
            android:layout_toStartOf="@+id/search_button">

        </ImageButton>


        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingRight="1dp"
            app:srcCompat="@drawable/btn_search"
            android:layout_toStartOf="@+id/messageView">

        </ImageButton>

        <ImageButton
            android:id="@+id/messageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingHorizontal="1dp"
            app:srcCompat="@drawable/btn_messenger"
            android:layout_alignParentEnd="true">

        </ImageButton>



    </RelativeLayout>




        <LinearLayout
            android:id="@+id/profileDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profileImageInProfile"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="4dp"
                android:scaleType="centerCrop"
                android:layout_gravity="top"
                android:src="@drawable/defaultpic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="5"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/userNameInProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/FriendRequestsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_friend"
                android:layout_marginTop="8dp"
                android:visibility="invisible"/>

        </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/feedRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profileDetails"
        android:layout_marginTop="15dp"
        android:padding="8dp"
        tools:listitem="@layout/post_item"
        android:visibility="visible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/feedMenuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/feed_menu"
        app:backgroundTint="@color/colorAccent" />

</RelativeLayout>
